Made prev-orders and wishlist css local to their respective pages. Fixed some column aligning of th e tables.

--- a/resources/assets/sass/components/_previousOrders.scss
+++ b/resources/assets/sass/components/_previousOrders.scss
@@ -3,57 +3,76 @@
     padding: 50px 0px 20px;
 }
 
-.prev-orders-list {
-    width: 90%;
-    margin: 20px auto;
-    margin-top: 2em;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    align-items: center;
-    background-color: $navColour;
-}
+.prev-orders-main {
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
+    .prev-orders-list {
+        width: 70%;
+        margin: 20px auto;
+        margin-top: 2em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: $navColour;
+    }
 
-td img {
-    margin-right: 10px;
-    width: 60px;
-    height: 80px;
-}
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
 
-th {
-    text-align: left;
-    background: #633A31;
-    color: $mainColour;
-    font-weight: normal;
-}
+    .prev-order {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    
+    td img {
+        margin-right: 10px;
+        width: 60px;
+        height: 80px;
+    }
+    
+    th {
+        text-align: left;
+        background: #633A31;
+        color: $mainColour;
+        font-weight: normal;
+        padding: 3px 15px 6px;
+    }
+    
+    td {
+        align-items: center;
+        padding: 15px 10px;
+    }
+    
+    td img {
+        margin-right: 10px;
+        width: 60px;
+        height: 80px;
+    }
+    
+    .book-img {
+        margin: 5px 10px 0px 5px;
+    }
 
-td {
-    align-items: center;
-}
+    td:nth-child(2) {
+        text-align: left;
+        padding-left: 40px;
+    }
+    
+    td:nth-child(3) {
+        text-align: left;
+    }
 
-td img {
-    margin-right: 10px;
-    width: 60px;
-    height: 80px;
-}
+    th:last-child {
+        text-align: center;
+    }
 
-.book-img {
-    margin: 5px 10px 0px 5px;
-}
-
-table:last-child {
-    text-align: center;
-}
-
-td:nth-child(3) {
-    text-align: left;
-}
-
-.name {
-    font-weight: 500;
+    td:last-child {
+        text-align: center;
+    }
+    
+    .name {
+        font-weight: 500;
+    }
 }
